Changes for CSS spacing issue and also page mappings

--- a/src/content/styles/locationDetails.css
+++ b/src/content/styles/locationDetails.css
@@ -40,7 +40,3 @@ a:hover {
 .crossStreetDetails{
   padding-top: 10px;
 }
-
-.patternLineGreen{
-  margin: 0;
-}
